<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">多联小助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="copyright">版权所有 @2009-2013 广州多联软件有限公司</string>
    
    <string name="search_hit">输入内容包含文字查找</string>
    <string name="say_hit">我说两句...</string>
    <!-- login -->
	<string name = "login">登 陆</string>
	<string name = "save_login">保持登陆</string>
	<string name = "account">用户:</string>
	<string name = "password">密码:</string>
	<string name = "noaccount">没有账号?</string>
	<string name = "freereg">免费注册</string>
	<!-- reg -->
	<string name = "reg">注册</string>
	<string name="input_email">输入邮箱</string>
	<string name="config_password">设置密码(6-16位)</string>
	<string name="affirm_password">确认密码(再写一遍密码)</string>
	<string name="verifi_code">验证码</string>
	<string name="reg_declare">点击注册表示你已阅读并同意《多联云平台服务条款》</string>
	<string name="hasaccount">已有账号?</string>
	<string name="loginnow">立即登录</string>
	<string name="choose_upload">选择文件</string>
	<string name="waitgps">GPS定位尚未就绪，请打开导航设备或稍后重试。</string>
	<!-- task status -->
	 <string-array name="task_status_arrays">
        <item>未开始</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>完成</item>
    </string-array>
    <!-- project category -->
	 <string-array name="project_category_arrays">
	     <item >一般</item>
	     <item >重要</item>
	     <item >紧急</item>
	 </string-array>
</resources>
